# iostreams-examples

./: LICENSE  README.md  meson.build
inc/: address_333.h  address_put_336.h  basic_mendl_183.h  bounded_width_190.h  buffer_x_device_235.h  char_x_device_229.h  copyfmterr_206.h  date_148.h  date_157.h  date_159.h  date_160.h  date_161.h  date_170.h  date_196.h  date_220.h  datefmt_210.h  defaultpatt_197.h  german_address_put_337.h  getidx_195.h  inbuf_239.h  locale_factory_340.h  mendl_180.h  mendl_184.h  ocdatestream_212.h  odatestream_215.h  odatestream_218.h  one_arg_manip_181.h  one_arg_manip_183.h  one_arg_manip_190.h  one_arg_manip_weh_187.h  outbuf_236.h  setfmt_helper_205.h  setfmt_helper_221.h  standalonefacet_309.h  unbuffered_streambuf_230.h  us_address_put_337.h  width_179.h  width_181.h  x_facet_317.h  x_facet_323.h
src/: ex013.cpp  ex014a.cpp  ex014b.cpp  ex015.cpp  ex017.cpp  ex018.cpp  ex020.cpp  ex021.cpp  ex022a.cpp  ex022b.cpp  ex023.cpp  ex026.cpp  ex027.cpp  ex029a.cpp  ex029b.cpp  ex030.cpp  ex034.cpp  ex035a.cpp  ex035b.cpp  ex036.cpp  ex037.cpp  ex038.cpp  ex039.cpp  ex040a.cpp  ex040b.cpp  ex041a.cpp  ex041b.cpp  ex043.cpp  ex044.cpp  ex045a.cpp  ex045b.cpp  ex046.cpp  ex048a.cpp  ex048b.cpp  ex049.cpp  ex050a.cpp  ex050b.cpp  ex053.cpp  ex055a.cpp  ex055b.cpp  (+71 more)
testdata/: meson.build
tests/: meson.build
