

ex013 = executable('ex013', 'ex013.cpp', include_directories: inc)
ex014a = executable('ex014a', 'ex014a.cpp', include_directories: inc)
ex014b = executable('ex014b', 'ex014b.cpp', include_directories: inc)
ex015 = executable('ex015', 'ex015.cpp', include_directories: inc)
ex017 = executable('ex017', 'ex017.cpp', include_directories: inc)
ex018 = executable('ex018', 'ex018.cpp', include_directories: inc)
ex020 = executable('ex020', 'ex020.cpp', include_directories: inc)
ex021 = executable('ex021', 'ex021.cpp', include_directories: inc)
ex022a = executable('ex022a', 'ex022a.cpp', include_directories: inc)
ex022b = executable('ex022b', 'ex022b.cpp', include_directories: inc)
ex023 = executable('ex023', 'ex023.cpp', include_directories: inc)
ex026 = executable('ex026', 'ex026.cpp', include_directories: inc)
ex027 = executable('ex027', 'ex027.cpp', include_directories: inc)
ex029a = executable('ex029a', 'ex029a.cpp', include_directories: inc)
ex029b = executable('ex029b', 'ex029b.cpp', include_directories: inc)
ex030 = executable('ex030', 'ex030.cpp', include_directories: inc)
ex034 = executable('ex034', 'ex034.cpp', include_directories: inc)
ex035a = executable('ex035a', 'ex035a.cpp', include_directories: inc)
ex035b = executable('ex035b', 'ex035b.cpp', include_directories: inc)
ex036 = executable('ex036', 'ex036.cpp', include_directories: inc)
ex037 = executable('ex037', 'ex037.cpp', include_directories: inc)
ex038 = executable('ex038', 'ex038.cpp', include_directories: inc)
ex039 = executable('ex039', 'ex039.cpp', include_directories: inc)
ex040a = executable('ex040a', 'ex040a.cpp', include_directories: inc)
ex040b = executable('ex040b', 'ex040b.cpp', include_directories: inc)
ex041a = executable('ex041a', 'ex041a.cpp', include_directories: inc)
ex041b = executable('ex041b', 'ex041b.cpp', include_directories: inc)
ex043 = executable('ex043', 'ex043.cpp', include_directories: inc)
ex044 = executable('ex044', 'ex044.cpp', include_directories: inc)
ex045a = executable('ex045a', 'ex045a.cpp', include_directories: inc)
ex045b = executable('ex045b', 'ex045b.cpp', include_directories: inc)
ex046 = executable('ex046', 'ex046.cpp', include_directories: inc)
ex048a = executable('ex048a', 'ex048a.cpp', include_directories: inc)
ex048b = executable('ex048b', 'ex048b.cpp', include_directories: inc)
ex049 = executable('ex049', 'ex049.cpp', include_directories: inc)
ex050a = executable('ex050a', 'ex050a.cpp', include_directories: inc)
ex050b = executable('ex050b', 'ex050b.cpp', include_directories: inc)
ex053 = executable('ex053', 'ex053.cpp', include_directories: inc)
ex055a = executable('ex055a', 'ex055a.cpp', include_directories: inc)
ex055b = executable('ex055b', 'ex055b.cpp', include_directories: inc)
ex056 = executable('ex056', 'ex056.cpp', include_directories: inc)
ex058 = executable('ex058', 'ex058.cpp', include_directories: inc)
ex066 = executable('ex066', 'ex066.cpp', include_directories: inc)
ex072 = executable('ex072', 'ex072.cpp', include_directories: inc)
ex074 = executable('ex074', 'ex074.cpp', include_directories: inc)
ex078a = executable('ex078a', 'ex078a.cpp', include_directories: inc)
ex078b = executable('ex078b', 'ex078b.cpp', include_directories: inc)
ex080 = executable('ex080', 'ex080.cpp', include_directories: inc)
ex083 = executable('ex083', 'ex083.cpp', include_directories: inc)
ex084 = executable('ex084', 'ex084.cpp', include_directories: inc)
ex111 = executable('ex111', 'ex111.cpp', include_directories: inc)
ex115 = executable('ex115', 'ex115.cpp', include_directories: inc)
ex118 = executable('ex118', 'ex118.cpp', include_directories: inc)
ex124 = executable('ex124', 'ex124.cpp', include_directories: inc)
ex126 = executable('ex126', 'ex126.cpp', include_directories: inc)
ex127a = executable('ex127a', 'ex127a.cpp', include_directories: inc)
ex127b = executable('ex127b', 'ex127b.cpp', include_directories: inc)
ex129 = executable('ex129', 'ex129.cpp', include_directories: inc)
ex131 = executable('ex131', 'ex131.cpp', include_directories: inc)
ex133 = executable('ex133', 'ex133.cpp', include_directories: inc)
ex135 = executable('ex135', 'ex135.cpp', include_directories: inc)
ex137 = executable('ex137', 'ex137.cpp', include_directories: inc)
ex148 = executable('ex148', 'ex148.cpp', include_directories: inc)
ex157 = executable('ex157', 'ex157.cpp', include_directories: inc)
ex159 = executable('ex159', 'ex159.cpp', include_directories: inc)
ex160 = executable('ex160', 'ex160.cpp', include_directories: inc)
ex161 = executable('ex161', 'ex161.cpp', include_directories: inc)
ex170 = executable('ex170', 'ex170.cpp', include_directories: inc)
ex176 = executable('ex176', 'ex176.cpp', include_directories: inc)
ex178a = executable('ex178a', 'ex178a.cpp', include_directories: inc)
ex178b = executable('ex178b', 'ex178b.cpp', include_directories: inc)
ex179 = executable('ex179', 'ex179.cpp', include_directories: inc)
ex181 = executable('ex181', 'ex181.cpp', include_directories: inc)
ex183 = executable('ex183', 'ex183.cpp', include_directories: inc)
ex187 = executable('ex187', 'ex187.cpp', include_directories: inc)
ex195 = executable('ex195', 'ex195.cpp', include_directories: inc)
ex196 = executable('ex196', 'ex196.cpp', include_directories: inc)
ex207 = executable('ex207', 'ex207.cpp', include_directories: inc)
ex210 = executable('ex210', 'ex210.cpp', include_directories: inc)
ex221 = executable('ex221', 'ex221.cpp', include_directories: inc)
ex234 = executable('ex234', 'ex234.cpp', include_directories: inc)
ex236 = executable('ex236', 'ex236.cpp', include_directories: inc)
ex239 = executable('ex239', 'ex239.cpp', include_directories: inc)
ex247 = executable('ex247', 'ex247.cpp', include_directories: inc)
ex268 = executable('ex268', 'ex268.cpp', include_directories: inc)
ex269 = executable('ex269', 'ex269.cpp', include_directories: inc)
ex270 = executable('ex270', 'ex270.cpp', include_directories: inc)
ex272 = executable('ex272', 'ex272.cpp', include_directories: inc)
ex273a = executable('ex273a', 'ex273a.cpp', include_directories: inc)
ex273b = executable('ex273b', 'ex273b.cpp', include_directories: inc)
ex273c = executable('ex273c', 'ex273c.cpp', include_directories: inc)
ex278a = executable('ex278a', 'ex278a.cpp', include_directories: inc)
ex278b = executable('ex278b', 'ex278b.cpp', include_directories: inc)
ex281 = executable('ex281', 'ex281.cpp', include_directories: inc)
ex284 = executable('ex284', 'ex284.cpp', include_directories: inc)
ex290 = executable('ex290', 'ex290.cpp', include_directories: inc)
ex296 = executable('ex296', 'ex296.cpp', include_directories: inc)
ex300 = executable('ex300', 'ex300.cpp', include_directories: inc)
ex306 = executable('ex306', 'ex306.cpp', include_directories: inc)
ex308 = executable('ex308', 'ex308.cpp', include_directories: inc)
ex310 = executable('ex310', 'ex310.cpp', include_directories: inc)
ex316 = executable('ex316', 'ex316.cpp', include_directories: inc)
ex317 = executable('ex317', 'ex317.cpp', include_directories: inc)
ex319 = executable('ex319', 'ex319.cpp', include_directories: inc)
ex321 = executable('ex321', 'ex321.cpp', include_directories: inc)
ex323 = executable('ex323', 'ex323.cpp', include_directories: inc)
ex328a = executable('ex328a', 'ex328a.cpp', include_directories: inc)
ex328b = executable('ex328b', 'ex328b.cpp', include_directories: inc)
ex330 = executable('ex330', 'ex330.cpp', include_directories: inc)
ex342 = executable('ex342', 'ex342.cpp', include_directories: inc)
